Wed Jul  5 19:15:37 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ACE-INSTALL.html: Cleaned up further; clarified role of DOC and
          support companies and use of PROBLEM-REPORT-FORM.

        * NEWS: Noted removal of Chorus and pSOS.

Tue Jul  4 04:10:11 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * tests/Memcpy_Test.cpp: Added a short summary of this test.
          Thanks to Arvind Krishna for contributing it.

Tue Jul  4 01:05:47 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * tests/Memcpy_Test.cpp (testit): ACE-ified this test.

Tue Jul  4 01:03:52 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * tests/CE_fostream.cpp: 
        * tests/Service_Config_Test.cpp: Improved the description of these tests.

Mon Jul  3 14:42:45 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * NEWS: Updated the NEWS file with information about using multiple
          service repositories.

Mon Jul  3 03:25:43 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * examples/APG/Svc_Config/HA_Configurable_Server_Dynamic.cpp
          (ACE_TMAIN): Changed the reactor event loop to explicitly pass
          in ACE_Reactor::check_reconfiguration().  Thanks to Michael Reed
          <mnr102 at yahoo dot com> for reporting this.

Mon Jul  3 03:15:14 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * examples/Service_Configurator/IPC-tests/server/server_test.cpp
          (ACE_TMAIN): Changed the reactor event loop to explicitly pass
          in ACE_Reactor::check_reconfiguration().

Fri Jun 30 13:40:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/msvc_static_order.lst:
          Added CSD_Framework and CSD_ThreadPool

Fri Jun 30 09:33:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_rel_manpages:
          Updated doxygen version we are using for the release
