@@ -1,3 +1,8 @@
+Thu Jul  6 19:57:50 UTC 2006  Steve Huston  <shuston@riverace.com>
+
+        * ACE-INSTALL.html: Improvements and corrections motivated by
+          Abdul Sowayan <abdullah dot sowayan at lmco dot com>.
+
 Wed Jul  5 19:15:37 UTC 2006  Steve Huston  <shuston@riverace.com>
 
         * ACE-INSTALL.html: Cleaned up further; clarified role of DOC and
@@ -17,7 +22,8 @@ Tue Jul  4 01:05:47 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
 Tue Jul  4 01:03:52 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
 
         * tests/CE_fostream.cpp: 
-        * tests/Service_Config_Test.cpp: Improved the description of these tests.
+        * tests/Service_Config_Test.cpp: Improved the description of these
+          tests.
 
 Mon Jul  3 14:42:45 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>
 
